# reddit-tracker

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: build-loader.yaml
.github/workflows/: build-fetcher.yaml  build-loader.yaml  build.yaml  build.yml  deploy-fetcher.yaml  deploy-infra.yaml  deploy.yaml  dockerfile-lint-fetcher.yaml  dockerfile-lint-loader.yaml  dockerfile-lint.yaml  make-migration.yaml  test-fetcher.yaml  test.yml
db_schema/: pyproject.toml
db_schema/migrations/: env.py
db_schema/migrations/versions/: 0ca04725c77c_change_subreddit_subscribers_primary_.py  4cee33292083_create_comments_table.py  5f617c9b0ca7_create_subreddits_table.py  7509be5e0c53_change_subreddit_subscribers_primary_.py  820e94dbaa4c_create_subreddit_subscribers_table.py  b9d8f10d054c_make_subreddit_subscribers_date_.py  (+2 more)
dispatcher/: main.py
fetcher/: Makefile
fetcher/src/: create_handler.py  model.py
fetcher/src/utils/: s3.py  (+1 more)
infrastructure/: .gitignore  .terraform.lock.hcl  athena.tf  ecr.tf  eventbridge.tf  glue.tf  lambda.tf  providers.tf  s3.tf  step_function.asl.json  step_function.tf  variables.tf
loader/: pyproject.toml
loader/src/: create_handler.py  dependencies.py  services.py  utils.py
src/: __init__.py  _types.py  create_handler.py  logger.py  main.py  model.py
src/_types/: __init__.py  _comments.py  _threads.py
src/reddit_client/: client.py
src/storer/: storer.py
src/utils/: s3.py  str_utils.py
tests/model/: test_base_entity.py  test_comment_list.py
tests/reddit_client/: test_reddit_client.py
transformer/: main.py
(+11 files in other folders)
